--- a/rabbitmq-consumer/.env.example
+++ b/rabbitmq-consumer/.env.example
@@ -44,3 +44,11 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+RABBITMQ_QUEUE=queue-rabbitmq
+RABBITMQ_HOST=rabbitmq-broker
+RABBITMQ_PORT=5672
+RABBITMQ_USER=guest
+RABBITMQ_PASSWORD=guest
+RABBITMQ_VHOST="/"
+RABBITMQ_WORKER=default
